editor-components/list/list8/list8.module.scss
@use "../../../composer-base-components/base/utitilities/viewports.module.scss" as *;

.container {
  background-color: var(--composer-html-background);

  .max-content {
    .content {
      display: flex;
      flex-direction: column;
      gap: calc(var(--composer-gap-lg) * 2);

      .header-section {
        width: 100%;
        display: flex;
        flex-direction: column;

        &.align-center {
          text-align: center;
          align-items: center;

          .subtitle,
          .title,
          .description {
            text-align: center;
          }

          .buttons-wrapper {
            justify-content: center;
          }
        }

        .buttons-wrapper {
          display: flex;
          flex-wrap: wrap;
          gap: var(--composer-gap-sm);

          .button .button-text {
            content: "";
          }
        }
      }

      .items-wrapper {
        gap: var(--composer-gap-xl);

        .list-item {
          background-color: color-mix(in srgb, var(--composer-html-background), var(--composer-font-color-primary) 5%);
          border-radius: var(--composer-border-radius-sm);
          position: relative;
          padding: var(--composer-gap-xl);
          display: flex;
          flex-direction: column;
          align-items: center;
          transition: all var(--composer-transition-duration-slow) ease-out;

          &[data-animation~="animate1"]:hover {
            box-shadow: var(--composer-box-shadow-lg);
          }

          &[data-animation~="animate2"]:hover .number-badge {
            animation: swing 1s ease-in-out;
            transform-origin: top center;
          }

          &[data-animation~="animate3"]:hover {
            transform: scale(1.1);
            transition: transform var(--composer-transition-duration-slow);
          }

          &[data-animation~="animate4"]:hover .number-badge {
            transform: translate(-50%, -50%) rotate(360deg);
            transition: transform var(--composer-transition-duration-normal);
          }

          .item-container {
            content: "";
            width: 100%;
            display: flex;
            flex-direction: column;
            align-items: center;
            text-align: center;

            .number-badge {
              content: "";
              position: absolute;
              left: 50%;
              top: 0;
              transform: translate(-50%, -50%);
              will-change: transform;
              min-width: calc(var(--composer-font-size-xl) * 3);
              min-height: calc(var(--composer-font-size-xl) * 3);
              width: fit-content;
              height: fit-content;
              padding: var(--composer-gap-xs) var(--composer-gap-sm);
              border-radius: var(--composer-border-radius-full);
              border: var(--composer-border-width-xs) solid color-mix(in srgb, var(--composer-html-background), var(--composer-font-color-primary) 5%);
              background-color: color-mix(in srgb, var(--composer-html-background), var(--composer-font-color-primary) 5%);
              box-shadow: var(--box-shadow-active);
              display: flex;
              align-items: center;
              justify-content: center;
              text-align: center;

              .index {
                content: "";
                color: var(--composer-font-color-primary);
                text-align: center;
                font-size: 2.5rem;
              }
            }

            .icon {
              content: "";
              font-size: 4rem;
              width: 4rem;
              height: 4rem;
              color: var(--composer-primary-color);
              display: inline-flex;
              align-items: center;
              justify-content: center;
              object-fit: contain;
            }

            .item-subtitle,
            .item-title,
            .item-text {
              content: "";
              text-align: center;
            }

            .item-subtitle,
            .item-title {
              color: var(--composer-font-color-primary);
            }

            .item-text {
              color: var(--composer-tertiary-color);
            }

            .item-buttons {
              content: "";
              display: flex;
              flex-wrap: wrap;
              justify-content: center;
              gap: var(--composer-gap-sm);

              .item-button,
              .item-button .button-text,
              .item-button .button-icon {
                content: "";
              }
            }
          }
        }
      }
    }
  }
}

@container (max-width: #{$composer-tablet-width}) {
  .container .max-content .content {
    gap: calc(var(--composer-gap-md) * 2);

    .items-wrapper {
      row-gap: calc(var(--composer-gap-xl) + 30px);
    }

    .items-wrapper .list-item .item-container {
      .number-badge {
        min-width: 60px;
        min-height: 60px;
        padding: var(--composer-gap-xs);

        .index {
          font-size: 2rem;
        }
      }

      .icon {
        font-size: 3rem;
        width: 3rem;
        height: 3rem;
      }
    }
  }
}

@container (max-width: #{$composer-phone-width}) {
  .container .max-content .content {
    gap: calc(var(--composer-gap-md) * 2);

    .items-wrapper .list-item .item-container {
      .number-badge {
        min-width: 50px;
        min-height: 50px;
        padding: var(--composer-gap-xs);

        .index {
          font-size: 2rem !important;
        }
      }

      .icon {
        font-size: 2rem;
        width: 2rem;
        height: 2rem;
      }
    }
  }
}

@keyframes swing {

  0%,
  100% {
    transform: translate(-50%, -50%) rotate(0deg);
  }

  20% {
    transform: translate(-50%, -50%) rotate(15deg);
  }

  40% {
    transform: translate(-50%, -50%) rotate(-10deg);
  }

  60% {
    transform: translate(-50%, -50%) rotate(5deg);
  }

  80% {
    transform: translate(-50%, -50%) rotate(-5deg);
  }
}

